# Libro.AgentWCAG

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  SKILL-TODO.md  TESTING-PLAN.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex/environments/: environment.toml
.github/ISSUE_TEMPLATE/: installation-failure.yml  remediation-mismatch.yml
.github/workflows/: install-skill.yml  libro-agent-wcag-real-scanner.yml  libro-wcag-real-scanner.yml  publish-npm.yml  release.yml  reusable-real-scanner-lane.yml  test.yml
docs/: README.en.md  README.md
docs/automations/: 20260328_report_todo.md  20260328_todo.md  agent-installation-expansion-todo.md  roadmap-execution-plan.md  run_accessibility_audit-refactor-plan.md  test-plan-automation.md  test-plan-review-policy.md  todo.md
docs/policy-bundles/: legacy-content.json  marketing-site.json  strict-web-app.json
docs/release/: adoption-smoke-guide.md  advanced-ci-gates.md  apply-fixes-scope.md  baseline-debt-lifecycle.md  baseline-governance.md  first-run-smoke.md  ga-definition.md  ga-release-workflow.md  provenance-verification.md  (+15 more)
mcp-server/: server.py
scripts/: apply-release-version.py  bootstrap.ps1  bootstrap.sh  doctor-agent.py  install-agent.ps1  install-agent.py  install-agent.sh  install-latest.ps1  install-latest.sh  libro.ps1  libro.py  libro.sh  package-release.py  run-realistic-validation-smoke.py  run-release-adoption-smoke.py  uninstall-agent.py  validate_skill.py  write-package-provenance.py
(+266 files in other folders)
