[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wcag-web-skill-repo"
version = "0.1.0"
description = "Publishable repository for the cross-agent WCAG web skill."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["skills/wcag-web-skill/scripts/tests"]
