[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "Libro.AgentWCAG"
version = "1.0.1"
description = "Publishable repository for the Libro.AgentWCAG cross-agent WCAG web skill."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["skills/libro-agent-wcag/scripts/tests"]
